--- a/QianQianMusic/QQMusic_headerNav.html
+++ b/QianQianMusic/QQMusic_headerNav.html
@@ -6,13 +6,14 @@
 		<link rel="stylesheet" type="text/css" href="css/headerNav.css"/>
 	</head>
 	<body>
+        <!-- 头部导航栏 -->
 		<div class="w top">
 			<!-- 为了使logo和ul垂直对齐，添加的额外div,无任何含义 -->
 			<div class="help"></div>
 			<a href="#" class="logo">
 				<img src="img/logo.png" />
 			</a>
-			<ul class="">
+			<ul>
 				<li><a href="#">发现音乐</a></li>
 				<li><a href="#">随心听</a></li>
 				<li><a href="#">客户端</a></li>
